--- a/openApiDocs/beta/PersonalContacts.yml
+++ b/openApiDocs/beta/PersonalContacts.yml
@@ -14,7 +14,7 @@ paths:
       description: Get all the contact folders in the signed-in user's mailbox.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/user-list-contactfolders?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/user-list-contactfolders?view=graph-rest-1.0
       operationId: user_ListContactFolder
       parameters:
         - name: user-id
@@ -99,7 +99,7 @@ paths:
       description: Create a new contactFolder under the user's default contacts folder. You can also create a new contactfolder as a child of any specified contact folder.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/user-post-contactfolders?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/user-post-contactfolders?view=graph-rest-1.0
       operationId: user_CreateContactFolder
       parameters:
         - name: user-id
@@ -135,7 +135,7 @@ paths:
       description: 'Get a contact folder by using the contact folder ID. There are two scenarios where an app can get another user''s contact folder:'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-get?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-get?view=graph-rest-1.0
       operationId: user_GetContactFolder
       parameters:
         - name: user-id
@@ -206,7 +206,7 @@ paths:
       description: Update the properties of contactfolder object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-update?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-update?view=graph-rest-1.0
       operationId: user_UpdateContactFolder
       parameters:
         - name: user-id
@@ -249,7 +249,7 @@ paths:
       description: Delete contactFolder other than the default contactFolder.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-delete?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-delete?view=graph-rest-1.0
       operationId: user_DeleteContactFolder
       parameters:
         - name: user-id
@@ -288,7 +288,7 @@ paths:
       description: Get a collection of child folders under the specified contact folder.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-list-childfolders?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-list-childfolders?view=graph-rest-1.0
       operationId: user.contactFolder_ListChildFolder
       parameters:
         - name: user-id
@@ -381,7 +381,7 @@ paths:
       description: Create a new contactFolder as a child of a specified folder.  You can also create a new contactFolder under the user's default contact folder.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-post-childfolders?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-post-childfolders?view=graph-rest-1.0
       operationId: user.contactFolder_CreateChildFolder
       parameters:
         - name: user-id
@@ -591,7 +591,7 @@ paths:
       description: 'Get all the contacts in the signed-in user''s mailbox (.../me/contacts), or from the specified contact folder.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-list-contacts?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-list-contacts?view=graph-rest-1.0
       operationId: user.contactFolder.childFolder_ListContact
       parameters:
         - name: user-id
@@ -791,10 +791,10 @@ paths:
       tags:
         - users.contactFolder
       summary: Create Contact
-      description: Add a contact to the root Contacts folder or to the `contacts` endpoint of another contact folder.
+      description: Add a contact to the root Contacts folder or to the contacts endpoint of another contact folder.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-post-contacts?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-post-contacts?view=graph-rest-1.0
       operationId: user.contactFolder.childFolder_CreateContact
       parameters:
         - name: user-id
@@ -1750,7 +1750,7 @@ paths:
       description: 'Get all the contacts in the signed-in user''s mailbox (.../me/contacts), or from the specified contact folder.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-list-contacts?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-list-contacts?view=graph-rest-1.0
       operationId: user.contactFolder_ListContact
       parameters:
         - name: user-id
@@ -1942,10 +1942,10 @@ paths:
       tags:
         - users.contactFolder
       summary: Create Contact
-      description: Add a contact to the root Contacts folder or to the `contacts` endpoint of another contact folder.
+      description: Add a contact to the root Contacts folder or to the contacts endpoint of another contact folder.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contactfolder-post-contacts?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contactfolder-post-contacts?view=graph-rest-1.0
       operationId: user.contactFolder_CreateContact
       parameters:
         - name: user-id
@@ -2773,7 +2773,7 @@ paths:
       description: 'Get contacts in the user''s mailbox. There are two scenarios where an app can get contacts in another user''s contact folder:'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/user-list-contacts?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/user-list-contacts?view=graph-rest-1.0
       operationId: user_ListContact
       parameters:
         - name: user-id
@@ -2961,7 +2961,7 @@ paths:
       description: Add a contact to the root Contacts folder or to the contacts endpoint of another contact folder.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/user-post-contacts?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/user-post-contacts?view=graph-rest-1.0
       operationId: user_CreateContact
       parameters:
         - name: user-id
@@ -2997,7 +2997,7 @@ paths:
       description: 'Retrieve the properties and relationships of contact object. There are two scenarios where an app can get a contact in another user''s contact folder:'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contact-get?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contact-get?view=graph-rest-1.0
       operationId: user_GetContact
       parameters:
         - name: user-id
@@ -3102,7 +3102,7 @@ paths:
       description: Update the properties of contact object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contact-update?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contact-update?view=graph-rest-1.0
       operationId: user_UpdateContact
       parameters:
         - name: user-id
@@ -3145,7 +3145,7 @@ paths:
       description: Delete contact.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/contact-delete?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/contact-delete?view=graph-rest-1.0
       operationId: user_DeleteContact
       parameters:
         - name: user-id
