--- a/openApiDocs/beta/CrossDeviceExperiences.yml
+++ b/openApiDocs/beta/CrossDeviceExperiences.yml
@@ -264,7 +264,7 @@ paths:
       description: Delete an existing user activity for your app.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/projectrome-delete-activity?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/projectrome-delete-activity?view=graph-rest-1.0
       operationId: user_DeleteActivity
       parameters:
         - name: user-id
@@ -518,7 +518,7 @@ paths:
       description: Delete an existing history item for an existing user activity.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/projectrome-delete-historyitem?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/projectrome-delete-historyitem?view=graph-rest-1.0
       operationId: user.activity_UpdateHistoryItem
       parameters:
         - name: user-id
@@ -1846,7 +1846,7 @@ paths:
       description: Groups and administrative units that this device is a member of. Read-only. Nullable. Supports $expand.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-list-memberof?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-list-memberof?view=graph-rest-1.0
       operationId: user.device_ListMemberGraphOPre
       parameters:
         - name: user-id
@@ -2456,7 +2456,7 @@ paths:
       description: The user that cloud joined the device or registered their personal device. The registered owner is set at the time of registration. Read-only. Nullable. Supports $expand.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-list-registeredowners?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-list-registeredowners?view=graph-rest-1.0
       operationId: user.device_ListRegisteredOwner
       parameters:
         - name: user-id
@@ -2547,7 +2547,7 @@ paths:
       description: Remove a user as a registered owner of the device.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-delete-registeredowners?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-delete-registeredowners?view=graph-rest-1.0
       operationId: user.device_DeleteRegisteredOwnerGraphBPreRef
       parameters:
         - name: user-id
@@ -2866,7 +2866,7 @@ paths:
       description: The user that cloud joined the device or registered their personal device. The registered owner is set at the time of registration. Read-only. Nullable. Supports $expand.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-list-registeredowners?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-list-registeredowners?view=graph-rest-1.0
       operationId: user.device_ListRegisteredOwnerGraphBPreRef
       parameters:
         - name: user-id
@@ -2931,7 +2931,7 @@ paths:
       description: Add a user as a registered owner of the device.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-post-registeredowners?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-post-registeredowners?view=graph-rest-1.0
       operationId: user.device_CreateRegisteredOwnerGraphBPreRef
       parameters:
         - name: user-id
@@ -3344,7 +3344,7 @@ paths:
       description: 'Collection of registered users of the device. For cloud joined devices and registered personal devices, registered users are set to the same value as registered owners at the time of registration. Read-only. Nullable. Supports $expand.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-list-registeredusers?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-list-registeredusers?view=graph-rest-1.0
       operationId: user.device_ListRegisteredUser
       parameters:
         - name: user-id
@@ -3435,7 +3435,7 @@ paths:
       description: Remove a user as a registered user of the device.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-delete-registeredusers?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-delete-registeredusers?view=graph-rest-1.0
       operationId: user.device_DeleteRegisteredUserGraphBPreRef
       parameters:
         - name: user-id
@@ -3754,7 +3754,7 @@ paths:
       description: 'Collection of registered users of the device. For cloud joined devices and registered personal devices, registered users are set to the same value as registered owners at the time of registration. Read-only. Nullable. Supports $expand.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-list-registeredusers?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-list-registeredusers?view=graph-rest-1.0
       operationId: user.device_ListRegisteredUserGraphBPreRef
       parameters:
         - name: user-id
@@ -3819,7 +3819,7 @@ paths:
       description: Add a registered user for the device.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-post-registeredusers?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-post-registeredusers?view=graph-rest-1.0
       operationId: user.device_CreateRegisteredUserGraphBPreRef
       parameters:
         - name: user-id
@@ -4232,7 +4232,7 @@ paths:
       description: Groups and administrative units that this device is a member of. This operation is transitive. Supports $expand.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-list-transitivememberof?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-list-transitivememberof?view=graph-rest-1.0
       operationId: user.device_ListTransitiveMemberGraphOPre
       parameters:
         - name: user-id
@@ -4842,7 +4842,7 @@ paths:
       description: Retrieve a list of usageRight objects for a given device.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/device-list-usagerights?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/device-list-usagerights?view=graph-rest-1.0
       operationId: user.device_ListUsageRight
       parameters:
         - name: user-id
@@ -8382,7 +8382,7 @@ components:
           properties:
             clientId:
               type: string
-              description: The id of the client service principal for the application which is authorized to act on behalf of a signed-in user when accessing an API. Required. Supports $filter (eq only).
+              description: The object id (not appId) of the client service principal for the application which is authorized to act on behalf of a signed-in user when accessing an API. Required. Supports $filter (eq only).
             consentType:
               type: string
               description: 'Indicates whether authorization is granted for the client application to impersonate all users or only a specific user. AllPrincipals indicates authorization to impersonate all users. Principal indicates authorization to impersonate a specific user. Consent on behalf of all users can be granted by an administrator. Non-admin users may be authorized to consent on behalf of themselves in some cases, for some delegated permissions. Required. Supports $filter (eq only).'
@@ -11082,11 +11082,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. Note that this might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: Unique identifier for the identity.
           nullable: true
       additionalProperties:
         type: object
@@ -12926,7 +12926,7 @@ components:
           nullable: true
         fieldId:
           type: string
-          description: 'Id used to identity the field type. This is an internal id and possible values are param_1, param_2, param_userName, param_password.'
+          description: 'Id used to identity the field type. This is an internal id and possible values are param1, param2, paramuserName, parampassword.'
           nullable: true
         type:
           type: string
@@ -17309,7 +17309,7 @@ components:
           properties:
             content:
               type: string
-              description: A field that represents the content of the transcript. Read-only.
+              description: The content of the transcript. Read-only.
               format: base64url
               nullable: true
             createdDateTime:
@@ -17320,7 +17320,7 @@ components:
               nullable: true
             metadataContent:
               type: string
-              description: A field that represents the time-aligned metadata of the utterances in the transcript. Read-only.
+              description: The time-aligned metadata of the utterances in the transcript. Read-only.
               format: base64url
               nullable: true
           additionalProperties:
@@ -18816,11 +18816,11 @@ components:
               nullable: true
             latestSupportedTlsVersion:
               type: string
-              description: 'Optional. Specifies the latest version of Transport Layer Security (TLS) that the notification endpoint, specified by notificationUrl, supports. The possible values are: v1_0, v1_1, v1_2, v1_3. For subscribers whose notification endpoint supports a version lower than the currently recommended version (TLS 1.2), specifying this property by a set timeline allows them to temporarily use their deprecated version of TLS before completing their upgrade to TLS 1.2. For these subscribers, not setting this property per the timeline would result in subscription operations failing. For subscribers whose notification endpoint already supports TLS 1.2, setting this property is optional. In such cases, Microsoft Graph defaults the property to v1_2.'
+              description: 'Optional. Specifies the latest version of Transport Layer Security (TLS) that the notification endpoint, specified by notificationUrl, supports. The possible values are: v10, v11, v12, v13. For subscribers whose notification endpoint supports a version lower than the currently recommended version (TLS 1.2), specifying this property by a set timeline allows them to temporarily use their deprecated version of TLS before completing their upgrade to TLS 1.2. For these subscribers, not setting this property per the timeline would result in subscription operations failing. For subscribers whose notification endpoint already supports TLS 1.2, setting this property is optional. In such cases, Microsoft Graph defaults the property to v1_2.'
               nullable: true
             lifecycleNotificationUrl:
               type: string
-              description: 'Optional. The URL of the endpoint that receives lifecycle notifications, including subscriptionRemoved, reauthorizationRequired, and missed notifications. This URL must make use of the HTTPS protocol.'
+              description: 'Required for Teams resources if the expirationDateTime value is more than 1 hour from now; optional otherwise. The URL of the endpoint that receives lifecycle notifications, including subscriptionRemoved, reauthorizationRequired, and missed notifications. This URL must make use of the HTTPS protocol. For more information, see Reduce missing subscriptions and change notifications.'
               nullable: true
             notificationContentType:
               type: string
@@ -20557,8 +20557,8 @@ components:
         - email
         - site
         - unifiedGroup
-        - unknownFutureValue
         - teamwork
+        - unknownFutureValue
       type: string
     microsoft.graph.applicationMode:
       title: applicationMode
@@ -23879,7 +23879,7 @@ components:
             lastModifiedDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: Date and time the version was last modified. Read-only.
+              description: Date and time when the version was last modified. Read-only.
               format: date-time
               nullable: true
             publication:
