--- a/openApiDocs/v1.0/ChangeNotifications.yml
+++ b/openApiDocs/v1.0/ChangeNotifications.yml
@@ -14,7 +14,7 @@ paths:
       description: 'Retrieve the properties and relationships of webhook subscriptions, based on the app ID, the user, and the user''s role with a tenant. The content of the response depends on the context in which the app is calling; for details, see the scenarios in the Permissions section.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/subscription-list?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/subscription-list?view=graph-rest-1.0
       operationId: subscription_ListSubscription
       parameters:
         - $ref: '#/components/parameters/search'
@@ -60,7 +60,7 @@ paths:
       description: 'Subscribes a listener application to receive change notifications when the requested type of changes occur to the specified resource in Microsoft Graph. To identify the resources for which you can create subscriptions and the limitations on subscriptions, see Set up notifications for changes in resource data: Supported resources. Some resources support rich notifications, that is, notifications that include resource data. For more information about these resources, see Set up change notifications that include resource data: Supported resources.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/subscription-post-subscriptions?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/subscription-post-subscriptions?view=graph-rest-1.0
       operationId: subscription_CreateSubscription
       requestBody:
         description: New entity
@@ -87,7 +87,7 @@ paths:
       description: Retrieve the properties and relationships of a subscription. See the table in the Permissions section for the list of resources that support subscribing to change notifications.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/subscription-get?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/subscription-get?view=graph-rest-1.0
       operationId: subscription_GetSubscription
       parameters:
         - name: subscription-id
@@ -141,7 +141,7 @@ paths:
       description: 'Renew a subscription by extending its expiry time. The table in the Permissions section lists the resources that support subscribing to change notifications. Subscriptions expire after a length of time that varies by resource type. In order to avoid missing change notifications, an app should renew its subscriptions well in advance of their expiry date. See subscription for maximum length of a subscription for each resource type.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/subscription-update?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/subscription-update?view=graph-rest-1.0
       operationId: subscription_UpdateSubscription
       parameters:
         - name: subscription-id
@@ -176,7 +176,7 @@ paths:
       description: 'Delete a subscription. For the list of resources that support subscribing to change notifications, see the table in the Permissions section.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/subscription-delete?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/subscription-delete?view=graph-rest-1.0
       operationId: subscription_DeleteSubscription
       parameters:
         - name: subscription-id
@@ -204,10 +204,10 @@ paths:
       tags:
         - subscriptions.Actions
       summary: Invoke action reauthorize
-      description: Reauthorize a subscription when you receive a **reauthorizationRequired** challenge.
+      description: Reauthorize a subscription when you receive a reauthorizationRequired challenge.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/subscription-reauthorize?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/subscription-reauthorize?view=graph-rest-1.0
       operationId: subscription_reauthorize
       parameters:
         - name: subscription-id
@@ -266,11 +266,11 @@ components:
               nullable: true
             latestSupportedTlsVersion:
               type: string
-              description: 'Optional. Specifies the latest version of Transport Layer Security (TLS) that the notification endpoint, specified by notificationUrl, supports. The possible values are: v1_0, v1_1, v1_2, v1_3. For subscribers whose notification endpoint supports a version lower than the currently recommended version (TLS 1.2), specifying this property by a set timeline allows them to temporarily use their deprecated version of TLS before completing their upgrade to TLS 1.2. For these subscribers, not setting this property per the timeline would result in subscription operations failing. For subscribers whose notification endpoint already supports TLS 1.2, setting this property is optional. In such cases, Microsoft Graph defaults the property to v1_2.'
+              description: 'Optional. Specifies the latest version of Transport Layer Security (TLS) that the notification endpoint, specified by notificationUrl, supports. The possible values are: v10, v11, v12, v13. For subscribers whose notification endpoint supports a version lower than the currently recommended version (TLS 1.2), specifying this property by a set timeline allows them to temporarily use their deprecated version of TLS before completing their upgrade to TLS 1.2. For these subscribers, not setting this property per the timeline would result in subscription operations failing. For subscribers whose notification endpoint already supports TLS 1.2, setting this property is optional. In such cases, Microsoft Graph defaults the property to v1_2.'
               nullable: true
             lifecycleNotificationUrl:
               type: string
-              description: 'Optional. The URL of the endpoint that receives lifecycle notifications, including subscriptionRemoved, reauthorizationRequired, and missed notifications. This URL must make use of the HTTPS protocol.'
+              description: 'Required for Teams resources if  the expirationDateTime value is more than 1 hour from now; optional otherwise. The URL of the endpoint that receives lifecycle notifications, including subscriptionRemoved, reauthorizationRequired, and missed notifications. This URL must make use of the HTTPS protocol. For more information, see Reduce missing subscriptions and change notifications.'
               nullable: true
             notificationQueryOptions:
               type: string
