--- a/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
+++ b/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
@@ -14,7 +14,7 @@ paths:
       description: Publish the specified browserSiteList for devices to download.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/browsersitelist-publish?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/browsersitelist-publish?view=graph-rest-1.0
       operationId: admin.edge.internetExplorerMode.siteList_publish
       parameters:
         - name: browserSiteList-id
@@ -148,10 +148,10 @@ paths:
       tags:
         - admin.serviceAnnouncement
       summary: List healthOverviews
-      description: Retrieve the serviceHealth resources from the **healthOverviews** navigation property. This operation provides the health report of all subscribed services for a tenant.
+      description: Retrieve the serviceHealth resources from the healthOverviews navigation property. This operation provides the health report of all subscribed services for a tenant.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-healthoverviews?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceannouncement-list-healthoverviews?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_ListHealthOverview
       parameters:
         - $ref: '#/components/parameters/top'
@@ -243,7 +243,7 @@ paths:
       description: Retrieve the properties and relationships of a serviceHealth object. This operation provides the health information of a specified service for a tenant.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/servicehealth-get?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/servicehealth-get?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_GetHealthOverview
       parameters:
         - name: serviceHealth-id
@@ -715,10 +715,10 @@ paths:
       tags:
         - admin.serviceAnnouncement
       summary: List issues
-      description: Retrieve serviceHealthIssue resources from the **issues** navigation property. This operation retrieves information about all service health issues that exist for the tenant.
+      description: Retrieve serviceHealthIssue resources from the issues navigation property. This operation retrieves information about all service health issues that exist for the tenant.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-issues?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceannouncement-list-issues?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_ListIssue
       parameters:
         - $ref: '#/components/parameters/top'
@@ -844,7 +844,7 @@ paths:
       description: Retrieve the properties and relationships of a serviceHealthIssue object. This operation retrieves a specified service health issue for tenant. The operation returns an error if the issue does not exist for the tenant.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/servicehealthissue-get?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/servicehealthissue-get?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_GetIssue
       parameters:
         - name: serviceHealthIssue-id
@@ -1011,10 +1011,10 @@ paths:
       tags:
         - admin.serviceAnnouncement
       summary: List serviceAnnouncement messages
-      description: Retrieve the serviceUpdateMessage resources from the **messages** navigation property. This operation retrieves all service update messages that exist for the tenant.
+      description: Retrieve the serviceUpdateMessage resources from the messages navigation property. This operation retrieves all service update messages that exist for the tenant.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-messages?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceannouncement-list-messages?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_ListMessage
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1145,7 +1145,7 @@ paths:
       description: Retrieve the properties and relationships of a serviceUpdateMessage object. This operation retrieves a specified service update message for the tenant. The operation returns an error if the message does not exist for the tenant.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-get?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-get?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_GetMessage
       parameters:
         - name: serviceUpdateMessage-id
@@ -1272,7 +1272,7 @@ paths:
       description: Get the list of attachments associated with a service message.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-list-attachments?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-list-attachments?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_ListAttachment
       parameters:
         - name: serviceUpdateMessage-id
@@ -1388,7 +1388,7 @@ paths:
       description: Read the properties and relationships of a serviceAnnouncementAttachment object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncementattachment-get?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceannouncementattachment-get?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_GetAttachment
       parameters:
         - name: serviceUpdateMessage-id
@@ -1527,7 +1527,7 @@ paths:
       description: The attachment content.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-list-attachments?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-list-attachments?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_GetAttachmentsContent
       parameters:
         - name: serviceUpdateMessage-id
@@ -1628,7 +1628,7 @@ paths:
       description: The zip file that contains all attachments for a message.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-messages?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceannouncement-list-messages?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_GetMessagesAttachmentsArchive
       parameters:
         - name: serviceUpdateMessage-id
@@ -1701,7 +1701,7 @@ paths:
       description: Archive a list of serviceUpdateMessages for the signed in user.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-archive?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-archive?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_archive
       requestBody:
         description: Action parameters
@@ -1743,7 +1743,7 @@ paths:
       description: Change the status of a list of serviceUpdateMessages to favorite for the signed in user.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-favorite?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-favorite?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_favorite
       requestBody:
         description: Action parameters
@@ -1782,10 +1782,10 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action markRead
-      description: Mark a list of serviceUpdateMessages as **read** for the signed in user.
+      description: Mark a list of serviceUpdateMessages as read for the signed in user.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-markread?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-markread?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_markRead
       requestBody:
         description: Action parameters
@@ -1824,10 +1824,10 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action markUnread
-      description: Mark a list of serviceUpdateMessages as **unread** for the signed in user.
+      description: Mark a list of serviceUpdateMessages as unread for the signed in user.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-markunread?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-markunread?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_markUnread
       requestBody:
         description: Action parameters
@@ -1869,7 +1869,7 @@ paths:
       description: Unarchive a list of serviceUpdateMessages for the signed in user.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-unarchive?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-unarchive?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_unarchive
       requestBody:
         description: Action parameters
@@ -1911,7 +1911,7 @@ paths:
       description: Remove the favorite status of serviceUpdateMessages for the signed in user.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-unfavorite?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/serviceupdatemessage-unfavorite?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_unfavorite
       requestBody:
         description: Action parameters
