--- a/openApiDocs/v1.0/People.yml
+++ b/openApiDocs/v1.0/People.yml
@@ -126,7 +126,7 @@ paths:
       description: 'Calculated insight that includes the list of documents shared with a user. This insight includes documents hosted on OneDrive/SharePoint in the user''s Microsoft 365 tenant that are shared with the user, and documents that are attached as files and sent to the user.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/insights-list-shared?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/insights-list-shared?view=graph-rest-1.0
       operationId: user.insight_ListShared
       parameters:
         - name: user-id
@@ -519,7 +519,7 @@ paths:
       description: Calculated insight that includes a list of documents trending around the user.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/insights-list-trending?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/insights-list-trending?view=graph-rest-1.0
       operationId: user.insight_ListTrending
       parameters:
         - name: user-id
@@ -848,10 +848,10 @@ paths:
       tags:
         - users.officeGraphInsights
       summary: List used
-      description: "Calculate and list the documents that a user has viewed or modified.  For the signed-in user:\n- This method includes documents that the user has modified; see example 1. \n- Using an `$orderby` query parameter on the **lastAccessedDateTime** property returns the most recently viewed documents that the user might or might not not have modified; see example 2. For other users, this method includes only documents that the user has modified."
+      description: "Calculate and list the documents that a user has viewed or modified.  For the signed-in user:\n- This method includes documents that the user has modified; see example 1. \n- Using an $orderby query parameter on the lastAccessedDateTime property returns the most recently viewed documents that the user might or might not not have modified; see example 2. For other users, this method includes only documents that the user has modified."
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/insights-list-used?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/insights-list-used?view=graph-rest-1.0
       operationId: user.insight_ListUsed
       parameters:
         - name: user-id
@@ -1179,7 +1179,7 @@ paths:
       description: 'Retrieve a collection of person objects ordered by their relevance to the user, which is determined by the user''s communication and collaboration patterns, and business relationships. You can get this information via the People API. For examples, see the Examples section and the article Use the People API to get information about the people most relevant to you.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/user-list-people?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/user-list-people?view=graph-rest-1.0
       operationId: user_ListPerson
       parameters:
         - name: user-id
